test-cases/negative/test_154_function_call_missing_with.lay
# negative test: function call without 'with' keyword
# expected: parser should reject this

define function add that takes x and y and returns Number
  return x plus y

the variable result of type Number is call add 5 and 10


